Added button to toggle whether sound plays or not.

--- a/css/style.css
+++ b/css/style.css
@@ -25,3 +25,16 @@ body {
 		height: 0px;
 	}
 }
+
+.btnRound {
+    display:inline-block;
+    width:50px;
+    height:50px;
+    line-height:50px;
+    text-align:center;
+    font-size:25px;
+    color:white;
+    border-radius:25px;
+    background:black;
+    cursor:pointer;
+}
