--- a/css/style.css
+++ b/css/style.css
@@ -94,8 +94,8 @@ canvas{
 
  #players img {
   height: 210%;
-  margin-top: -33px;
-/*  margin-bottom: -10px;*/
+  margin-top: -30px;
+  margin-bottom: -20px;
   float: left;
 }
 
@@ -119,7 +119,12 @@ canvas{
     cursor:pointer;
 }
 
+/*
  .selected img{
+    background:blue;
+}
+*/
+ .selected {
     background:blue;
 }
 
